--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: fabianderijk dev blog
+title: FDR tech blog
 email: ik@fabianderijk.nl
 description: >- # this means to ignore newlines until "baseurl:"
   Just some blogs about techy stuff I like to write about.
